# mnist

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  get_db.sh  kaggle.sh
.cargo/: config.toml
.github/workflows/: pages.yaml
pages/: index.html  script.js  style.css
src/: lib.rs  main.rs  reader.rs
