[package]
name = "mnist"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.1", default-features = false, features = ["use-std"] }
serde = { version = "1.0.216", features = ["derive"] }
smolmatrix = { version = "0.1.9", features = ["serde"] }
smolnn2 = { version = "0.1.0", path = "smolnn2", features = ["serde", "macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = "2.3.0"
stacker = "0.1.17"

[lib]
crate-type = ["cdylib", "rlib"]
